cluster/services/default/code-server/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server
  labels:
    app.kubernetes.io/name: code-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: code-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: code-server
    spec:
      containers:
        - name: code-server
          image: codercom/code-server:4.2.0
          imagePullPolicy: Always
          # env:
          # - name: PASSWORD
          #   valueFrom:
          #     secretKeyRef:
          #       name:
          #       key: password
          volumeMounts:
            - name: data
              mountPath: /home/coder
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
      securityContext:
        fsGroup: 100
        supplementalGroups:
          - 100
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pvc-code-server
