cluster/services/default/code-server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: code-server
  namespace: default
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: code-server
