cluster/services/default/code-server/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: code-server
  name: code-server
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: code.harrigan.cloud
      http:
        paths:
          - backend:
              service:
                name: code-server
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts: [code.harrigan.cloud]
